(fix):import pictures

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>Personal Resume Website</title>
   <meta
    property="og:image"
-   content="./src/public/preview/preview.webp"
+   content="../src/public/preview/preview.webp"
   />
   <meta
    name="twitter:card"
@@ -22,7 +22,7 @@
   />
   <meta
    name="twitter:image"
-   content="./src/public/preview/preview.webp"
+   content="../src/public/preview/preview.webp"
   />
  </head>
  <body>
