--- a/index.html
+++ b/index.html
@@ -5,31 +5,19 @@
   <link
    rel="icon"
    type="image/svg+xml"
-   href="/vite.svg"
+   href="/src/public/icon-skills/React.svg"
   />
   <meta
    name="viewport"
    content="width=device-width, initial-scale=1.0"
   />
-  <title>Personal Resume Website</title>
-  <meta
-   property="og:image"
-   content="../src/public/preview/preview.webp"
-  />
-  <meta
-   name="twitter:card"
-   content="summary_large_image"
-  />
-  <meta
-   name="twitter:image"
-   content="../src/public/preview/preview.webp"
-  />
- </head>
- <body>
-  <div id="root"></div>
+  <title>My Resume</title>
   <script
    type="module"
    src="/src/main.tsx"
   ></script>
+ </head>
+ <body>
+  <div id="root"></div>
  </body>
 </html>
